Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10918

InnoDB 5.7 aborts on AIO initialization failure

    XMLWordPrintable

Details

    Description

      Should be reproducible with mtr --parallel=80 --suite=innodb on Linux with AIO enabled.

      Default limit for AIO events is 65k. mtr can easily exhaust it, especially with spider tests.

      There're 2 problems here:
      1. Warning format has changed causing "check test case" failures. Suppressions in mysql-test-run.pl should be adjusted accordingly.
      2. InnoDB aborts on AIO initialization failure. This was fixed in 10.0 after InnoDB 5.6 merge, see rev. fab9a55d077b4f2a511b273d5f51272f1e3dc1ff

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: